[package]
name = "tt-set-freq"
version = "0.1.0"
edition = "2024"

[dependencies]
luwen-core = { git = "https://github.com/tenstorrent/luwen.git", tag = "v0.7.2", version = "0.2.0" }
luwen-if = { git = "https://github.com/tenstorrent/luwen.git", tag = "v0.7.2", version = "0.6.5" }
luwen-ref = { git = "https://github.com/tenstorrent/luwen.git", tag = "v0.7.2", version = "0.5.3" }
thiserror = "2.0.12"
ttkmd-if = { git = "https://github.com/tenstorrent/luwen.git", tag = "v0.7.2", version = "0.2.2" }
